--- a/index.html
+++ b/index.html
@@ -19,3 +19,4 @@
             <a href="data/2025_VGGT/2025_VGGT_Visual_Geometry_Grounded_Transformer.html">2025 VGGT: Visual Geometry Grounded Transformer</a>
         </p>
     </body>
+</html>
