--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <p>
             公開されているPDFを日本語に翻訳してみた。<br>
             <br>
-            <a href="data/2025_VGGT/2025_VGGT_Visual_Geometry_Grounded_Transformer.html">2025 VGGT: Visual Geometry Grounded Transformer</a>
+            <a href="data/2025_VGGT/2025_VGGT_Visual_Geometry_Grounded_Transformer.html">2025 VGGT: Visual Geometry Grounded Transformer</a><br>
             <a href="1967_Brain_and_Physics_of_Many-Body_Problems/1967_Brain and Physics of Many-Body Problems.html">1967 Brain and Physics of Many-Body Problems</a>
         </p>
     </body>
