--- a/1967_Brain_and_Physics_of_Many-Body_Problems/1967_Brain and Physics of Many-Body Problems(eng).html
+++ b/1967_Brain_and_Physics_of_Many-Body_Problems/1967_Brain and Physics of Many-Body Problems(eng).html
@@ -474,7 +474,7 @@ principal quantum number; the corresponding energy
 \[
 E_i=n_i\omega_i　(n_i=0,1,2,...)
 \]
-where \(omega_i\) denotes the energy of the oscillation. Since
+where \(\omega_i\) denotes the energy of the oscillation. Since
 we are concerned only with long half-life quasi stationary
 oscillations, we will consider them, in a first
 approximation, as stationary oscillations.
