--- a/1967_Brain_and_Physics_of_Many-Body_Problems/1967_Brain and Physics of Many-Body Problems.html
+++ b/1967_Brain_and_Physics_of_Many-Body_Problems/1967_Brain and Physics of Many-Body Problems.html
@@ -152,7 +152,7 @@
 \[
 E_i=n_i\omega_i　(n_i=0,1,2,...)
 \]
-ここで、\(omega_i\) は振動のエネルギーを表す。ここでは半減期の長い準定常振動のみを対象とするため、第一近似として、それらを定常振動として考える。
+ここで、\(\omega_i\) は振動のエネルギーを表す。ここでは半減期の長い準定常振動のみを対象とするため、第一近似として、それらを定常振動として考える。
         </p>
         <p>
 ここで、変数 \(X_i\) がボーズ統計 <sup>7</sup> に従うと仮定する。これは、次の交換関係が成り立つことを意味する。
