--- a/1967_Brain_and_Physics_of_Many-Body_Problems/1967_Brain and Physics of Many-Body Problems.html
+++ b/1967_Brain_and_Physics_of_Many-Body_Problems/1967_Brain and Physics of Many-Body Problems.html
@@ -190,12 +190,6 @@ Their hermitic conjugate \(\xi_j^\dagger\) are then given by
 \[
 \exp[-i\omega_j t]
 \]
-Denoting now by \(\Phi_0\) the ground state, whose energy
-is regarded as zero, the states \(\xi_j^\dagger\Phi_0\) represent excited
-states whose correspondent energies are \(z\omega_j\). Proceeding
-in this way we may construct all the excited states.
-        </p>
-        <p>
 ここで、エネルギーがゼロとみなされる基底状態を \(\Phi_0\) で表すと、状態 \(\xi_j^\dagger\Phi_0\) は対応するエネルギーが \(z\omega_j\) である励起状態を表す。この方法で進めていくと、すべての励起状態を構築できる。
 \[
 \langle\tilde{\xi}_j\rangle=\eta_j\neq 0
@@ -237,8 +231,9 @@ in this way we may construct all the excited states.
         <p>
 最後に、任意の連続変換下での検討対象のダイナミクスの不変性は、特定の量子数を運ぶ局所的に保存される電流の起源となり、これが長距離相関の起源となることを思い出そう。注目すべきは、コード（つまり量子数）の通信は保存される電流によってのみ実行されるという事実であり、この状況は、コードが自発的に消滅しないという意味で、コードの保存を自動的に保証する。
         </p>
+<h2><center>謝辞</center></h2>
         <p>
-謝辞　第一著者 (L.M.R.) は、7 月 18 日から 8 月 12 日までコロラド州ボルダーで開催された神経科学研究プログラム、集中研究プログラムにお招きいただいた F. O. SCHMITT 教授に感謝の意を表す。このプログラムでは、一部の研究が行われた。
+第一著者 (L.M.R.) は、7 月 18 日から 8 月 12 日までコロラド州ボルダーで開催された神経科学研究プログラム、集中研究プログラムにお招きいただいた F. O. SCHMITT 教授に感謝の意を表す。このプログラムでは、一部の研究が行われた。
         </p>
         <p>
 第二著者（H.U.）は、ナポリの物理学理論研究所でのおもてなしに対してE.R. CAIANIELLO教授に心から感謝の意を表す。
