--- a/2012_AlexNet/2012_Imagenet-classification-with-deep-convolutional-neural-networks.html
+++ b/2012_AlexNet/2012_Imagenet-classification-with-deep-convolutional-neural-networks.html
@@ -149,7 +149,7 @@ b_{x,y}^i=a_{x,y}^i/\left(k+\alpha\sum_{j=max(0,i-n/2)}^{min(N-1,i+n/2)}(a_{x,y}
 この方式は、Jarrett ら [11] のローカルコントラスト正規化方式と似ているが、平均活性化を減算しないため、我々の方式は「明るさ正規化」と呼ぶ方が正確であろう。応答正規化により、トップ 1 とトップ 5 のエラー率がそれぞれ 1.4% と 1.2% 減少する。また、CIFAR-10 データセットでこの方式の有効性も検証した。4 層の CNN は、正規化なしで 13% のテストエラー率を達成し、正規化ありで 11% を達成した<sup>3</sup>。
         </p>
         <p class="margin-large">
-<sup>3</sup> スペースの制約により、このネットワークを詳しく説明することはできないが、ここで提供されているコードとパラメータ ファイルによって正確に指定される: http://code.google.com/p/cuda-convnet/。
+<sup>3</sup> スペースの制約により、このネットワークを詳しく説明することはできないが、ここで提供されているコードとパラメータ ファイルによって正確に指定される: http://code.google.com/p/cuda-convnet/ (アクセスできない)
         </p>
 <h3>3.4 オーバーラップ・プーリング</h3>
         <p>
