--- a/2012_AlexNet/2012_Imagenet-classification-with-deep-convolutional-neural-networks.html
+++ b/2012_AlexNet/2012_Imagenet-classification-with-deep-convolutional-neural-networks.html
@@ -211,7 +211,7 @@ w_{i+1} &:= w_i + v_{i+1}
         </p>
         <p>
 すべてのレイヤーに同じ学習率を使用し、トレーニング中は手動で調整した。
-我々が従ったヒューリスティックは、現在の学習率で検証エラー率の改善が止まったときに学習率を 10 で割ることである。学習率は 0.01 で初期化され、終了前に 3 回削減された。120 万枚の画像のトレーニング セットを使用して、ネットワークを約 90 サイクルトレーニングした。これには、2 つの 
+我々が従ったヒューリスティックは、現在の学習率で検証エラー率の改善が止まったときに学習率を 10 で割ることである。学習率は 0.01 で初期化され、終了前に 3 回削減された。120 万枚の画像のトレーニング セットを使用して、ネットワークを約 90 サイクルトレーニングした。これには、2 つの  NVIDIA GTX 580 3GB GPU で 5 ～ 6 日かかった。
         </p>
 <h2>6 結果</h2>
         <p>
