--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <br>
             <a href="data/2025_VGGT/2025_VGGT_Visual_Geometry_Grounded_Transformer.html">2025 VGGT: Visual Geometry Grounded Transformer</a><br>
             <a href="2025_DL_not_so_Mysterious/2025_Deep_Learning_is_Not_So_Mysterious_or_Different.html">2025 Deep Learning is Not So Mysterious or Different</a><br>
-            <a href="2019_The Lottery Ticket Hypothesis/2019_The Lottery Ticket Hypothesis - Finding Sparse, Trainable Neural Networks.html">2019_The Lottery Ticket Hypothesis</a><br>
+            <a href="2019_The Lottery Ticket Hypothesis/2019_The Lottery Ticket Hypothesis - Finding Sparse, Trainable Neural Networks.html">2019_(宝くじ仮説)</a><br>
             <a href="2012_AlexNet/2012_Imagenet-classification-with-deep-convolutional-neural-networks.html">2012 (AlexNet)</a><br>
             <a href="1968_Frörich_hypothesis/1968_Long-Range Coherence and Energy Storage in Biological Systems.html">1968_(フレーリッヒの仮説)</a><br>
             <a href="1967_Brain_and_Physics_of_Many-Body_Problems/1967_Brain and Physics of Many-Body Problems.html">1967 Brain and Physics of Many-Body Problems</a><br>
