--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <a href="2012_AlexNet/2012_Imagenet-classification-with-deep-convolutional-neural-networks.html">2012 (AlexNet)</a><br>
             <a href="2001_Viola_Jones_Face_Detection/2001_Robus Real-time Object Detection.html">2001 (Viola & Jones 顔検出器)</a><br>
             <a href="1968_Frörich_hypothesis/1968_Long-Range Coherence and Energy Storage in Biological Systems.html">1968_(フレーリッヒの仮説)</a><br>
-            <a href="1967_Brain_and_Physics_of_Many-Body_Problems/1967_Brain and Physics of Many-Body Problems.html">1967 Brain and Physics of Many-Body Problems</a><br>
+            <a href="1967_Brain_and_Physics_of_Many-Body_Problems/1967_Brain and Physics of Many-Body Problems.html">1967 (脳と多体問題の物理学：梅沢博臣)</a><br>
         </p>
     </body>
 </html>
