--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <a href="2019_The Lottery Ticket Hypothesis/2019_The Lottery Ticket Hypothesis - Finding Sparse, Trainable Neural Networks.html">2019_(宝くじ仮説)</a><br>
             <a href="2018_LPIPS/2018_The Unreasonable Effectiveness of Deep Features as a Perceptual Metric.html">2018 (LPIPS)</a><br>
             <a href="2012_AlexNet/2012_Imagenet-classification-with-deep-convolutional-neural-networks.html">2012 (AlexNet)</a><br>
+            <a href="2012_VideoMagnification/2012_Eulerian Video Magnification for Revealing Subtle Changes in the World.html">2012 Video Magnification</a><br>
             <a href="2007_Nonlinear_Quantum_Mechanics/2007_Classical_Mechanics_as_Nonlinear_Quantum_Mechanics.html">2007 (非線形量子力学としての古典力学)</a><br>
             <a href="2001_Viola_Jones_Face_Detection/2001_Robus Real-time Object Detection.html">2001 (Viola & Jones 顔検出器)</a><br>
             <a href="1968_Frörich_hypothesis/1968_Long-Range Coherence and Energy Storage in Biological Systems.html">1968_(フレーリッヒの仮説)</a><br>
