--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <a href="2025_DL_not_so_Mysterious/2025_Deep_Learning_is_Not_So_Mysterious_or_Different.html">2025 Deep Learning is Not So Mysterious or Different</a><br>
             <a href="2019_The Lottery Ticket Hypothesis/2019_The Lottery Ticket Hypothesis - Finding Sparse, Trainable Neural Networks.html">2019_(宝くじ仮説)</a><br>
             <a href="2018_LPIPS/2018_The Unreasonable Effectiveness of Deep Features as a Perceptual Metric.html">2018 (LPIPS)</a><br>
+            <a href="2015_Smart_Home/2015_Smart Homes that Monitor Breathing and Heart Rate.html">2015 (Smart Home)</a><br>
             <a href="2012_AlexNet/2012_Imagenet-classification-with-deep-convolutional-neural-networks.html">2012 (AlexNet)</a><br>
             <a href="2012_VideoMagnification/2012_Eulerian Video Magnification for Revealing Subtle Changes in the World.html">2012 Video Magnification</a><br>
             <a href="2007_Nonlinear_Quantum_Mechanics/2007_Classical_Mechanics_as_Nonlinear_Quantum_Mechanics.html">2007 (非線形量子力学としての古典力学)</a><br>
