--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
             <a href="2025_DL_not_so_Mysterious/2025_Deep_Learning_is_Not_So_Mysterious_or_Different.html">2025 Deep Learning is Not So Mysterious or Different</a><br>
             <a href="2019_The Lottery Ticket Hypothesis/2019_The Lottery Ticket Hypothesis - Finding Sparse, Trainable Neural Networks.html">2019_(宝くじ仮説)</a><br>
             <a href="2018_LPIPS/2018_The Unreasonable Effectiveness of Deep Features as a Perceptual Metric.html">2018 (LPIPS)</a><br>
-            <a href="2016_FingerIO/2016_FingerIO Using Active Sonar for Fine-Grained Finger Tracking.html"></a>2016 (FingerIO)<br>
+            <a href="2016_FingerIO/2016_FingerIO Using Active Sonar for Fine-Grained Finger Tracking.html">2016 (FingerIO)</a><br>
             <a href="2015_Smart_Home/2015_Smart Homes that Monitor Breathing and Heart Rate.html">2015 (Smart Home)</a><br>
             <a href="2012_AlexNet/2012_Imagenet-classification-with-deep-convolutional-neural-networks.html">2012 (AlexNet)</a><br>
             <a href="2012_VideoMagnification/2012_Eulerian Video Magnification for Revealing Subtle Changes in the World.html">2012 Video Magnification</a><br>
             <a href="2007_Nonlinear_Quantum_Mechanics/2007_Classical_Mechanics_as_Nonlinear_Quantum_Mechanics.html">2007 (非線形量子力学としての古典力学)</a><br>
             <a href="2001_Viola_Jones_Face_Detection/2001_Robus Real-time Object Detection.html">2001 (Viola & Jones 顔検出器)</a><br>
-            <a href="1992_plenoptic_camera/1992_Single_Lens_Stereo_with_a_Plenoptic_Camera.html"></a>1992 (プレノプティック・カメラ)<br>
+            <a href="1992_plenoptic_camera/1992_Single_Lens_Stereo_with_a_Plenoptic_Camera.html">1992 (プレノプティック・カメラ)</a><br>
             <a href="1968_Frörich_hypothesis/1968_Long-Range Coherence and Energy Storage in Biological Systems.html">1968_(フレーリッヒの仮説)</a><br>
             <a href="1967_Brain_and_Physics_of_Many-Body_Problems/1967_Brain and Physics of Many-Body Problems.html">1967 (脳と多体問題の物理学：梅沢博臣)</a><br>
         </p>
