--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <p>
             公開されているPDFを日本語に翻訳してみた。<br>
             <br>
-            <a href="2025_Welcome to the Era of Experience/2025_Welcome to the Era of Experience.html">2025 体験の時代へようこそ</a><br>
+            <a href="2025_Welcome to the Era of Experience/2025_Welcome to the Era of Experience.html">2025 経験の時代へようこそ</a><br>
             <a href="data/2025_VGGT/2025_VGGT_Visual_Geometry_Grounded_Transformer.html">2025 VGGT: Visual Geometry Grounded Transformer</a><br>
             <a href="2025_DL_not_so_Mysterious/2025_Deep_Learning_is_Not_So_Mysterious_or_Different.html">2025 Deep Learning is Not So Mysterious or Different</a><br>
             <a href="2019_The Lottery Ticket Hypothesis/2019_The Lottery Ticket Hypothesis - Finding Sparse, Trainable Neural Networks.html">2019_(宝くじ仮説)</a><br>
