Update 2025_Welcome to the Era of Experience.html

--- a/2025_Welcome to the Era of Experience/2025_Welcome to the Era of Experience.html
+++ b/2025_Welcome to the Era of Experience/2025_Welcome to the Era of Experience.html
@@ -76,7 +76,7 @@
     </head>
     <body>
         <h1><center>Welcome to the Era of Experience</center></h1>
-<center>体験の時代へようこそ</center><br>
+<center>経験の時代へようこそ</center><br>
 <br>
 <center>David Silver, Richard S. Sutton</center>
 
@@ -110,7 +110,7 @@ However, while imitating humans is enough to reproduce many human capabilities t
 -->
 </p>
   <p>  
-この移行は、人間中心のAIの典型である大規模言語モデルにおいても、すでに始まっているかもしれません。その一例は数学の能力です。AlphaProof [20]は最近、国際数学オリンピックでメダルを獲得した最初のプログラムとなり、人間中心のアプローチ[27, 19]の性能を凌駕しました。AlphaProofの強化学習（RL）アルゴリズム<sup>1</sup>は、当初、人間の数学者によって長年かけて作成された約10万通りの形式的証明に曝され、その後、形式的証明システムとの継続的なインタラクションを通じてさらに1億通りの証明を生成しました。インタラクティブな体験に重点を置くことで、AlphaProofは既存の形式的証明の枠を超えた数学的可能性を探求し、斬新で困難な問題の解を発見することができました。非公式数学もまた、専門家が生成したデータを自己生成データに置き換えることで成功を収めています。例えば、DeepSeekの最近の研究は、強化学習の力と美しさを強調しています。モデルに問題の解決方法を明示的に教えるのではなく、適切なインセンティブを与えるだけで、モデルは高度な問題解決戦略を自律的に開発するのです。」[10]
+この移行は、人間中心のAIの典型である大規模言語モデルにおいても、すでに始まっているかもしれません。その一例は数学の能力です。AlphaProof [20]は最近、国際数学オリンピックでメダルを獲得した最初のプログラムとなり、人間中心のアプローチ[27, 19]の性能を凌駕しました。AlphaProofの強化学習（RL）アルゴリズム<sup>1</sup>は、当初、人間の数学者によって長年かけて作成された約10万通りの形式的証明に曝され、その後、形式的証明システムとの継続的なインタラクションを通じてさらに1億通りの証明を生成しました。インタラクティブな経験に重点を置くことで、AlphaProofは既存の形式的証明の枠を超えた数学的可能性を探求し、斬新で困難な問題の解を発見することができました。非公式数学もまた、専門家が生成したデータを自己生成データに置き換えることで成功を収めています。例えば、DeepSeekの最近の研究は、強化学習の力と美しさを強調しています。モデルに問題の解決方法を明示的に教えるのではなく、適切なインセンティブを与えるだけで、モデルは高度な問題解決戦略を自律的に開発するのです。」[10]
 <!--
 This transition may have already started, even for the large language models that epitomise human-centric  AI. One example is in the capability of mathematics. AlphaProof [20] recently became the first program to  achieve a medal in the International Mathematical Olympiad, eclipsing the performance of human-centric  approaches [27, 19]. Initially exposed to around a hundred thousand formal proofs, created over many years by human mathematicians, AlphaProof’s reinforcement learning (RL) algorithm <sup>1</sup>
  subsequently generated a  hundred million more through continual interaction with a formal proving system. This focus on interactive  experience allowed AlphaProof to explore mathematical possibilities beyond the confines of pre-existing  formal proofs, so as to discover solutions to novel and challenging problems. Informal mathematics has  also achieved success by replacing expert generated data with self-generated data; for example, recent work  from DeepSeek “underscores the power and beauty of reinforcement learning: rather than explicitly teaching  the model on how to solve a problem, we simply provide it with the right incentives, and it autonomously  develops advanced problem-solving strategies.” [10]  
@@ -379,7 +379,7 @@ Furthermore, whilst general concerns exist around the potential misuse of any AI
 -->
 </p>
   <p>  
-しかし、体験学習によって特定の安全上のリスクが増大し、体験の時代への安全な移行を確実にするためにさらなる研究が必要であることを認めつつも、体験学習がいくつかの重要な安全上の利点をもたらす可能性もあることを認識する必要があります。
+しかし、経験学習によって特定の安全上のリスクが増大し、経験の時代への安全な移行を確実にするためにさらなる研究が必要であることを認めつつも、経験学習がいくつかの重要な安全上の利点をもたらす可能性もあることを認識する必要があります。
 <!--
 However, whilst acknowledging that experiential learning will increase certain safety risks, and that further  research is surely required to ensure a safe transition into the era of experience, we should also recognise  that it may also provide some important safety benefits.  
 -->
