--- a/2025_Jekyll-and-Hyde/2025_Jekyll-and-Hyde Tipping Point in an AI’s Behavior (eng).html
+++ b/2025_Jekyll-and-Hyde/2025_Jekyll-and-Hyde Tipping Point in an AI’s Behavior (eng).html
@@ -201,7 +201,7 @@ The exact formula for when the tipping point will occur hence comes from setting
 \(\underline{c}_n · \underline{B} = \underline{c}_n · \underline{G}\), which yields the tipping-point iteration number (time) as:
 \[
 \begin{align}
-n^* &=\frac{\left[\begin{array}{c}\text{bias in prompt}\\ \text{towards G vs. B words}\end{array}\right]}{\left[\begin{array}{c}\text{how much each new G wird tips}\\ \text{AI's attention towards B vs. G words}\end{array}\right]}-\left[\begin{array}{c}\text{number of G} \\ \text{words in} \\ \text{full prompt}\end{array}\right] \tag{1} \\
+n^* &=\frac{\left[\begin{array}{c}\text{bias in prompt}\\ \text{towards G vs. B words}\end{array}\right]}{\left[\begin{array}{c}\text{how much each new G word tips}\\ \text{AI's attention towards B vs. G words}\end{array}\right]}-\left[\begin{array}{c}\text{number of G} \\ \text{words in} \\ \text{full prompt}\end{array}\right] \tag{1} \\
 
 \\
 
