--- a/2025_Jekyll-and-Hyde/2025_Jekyll-and-Hyde Tipping Point in an AI’s Behavior.html
+++ b/2025_Jekyll-and-Hyde/2025_Jekyll-and-Hyde Tipping Point in an AI’s Behavior.html
@@ -232,7 +232,7 @@ The exact formula for when the tipping point will occur hence comes from setting
 -->
 \[
 \begin{align}
-n^* &=\frac{\left[\begin{array}{c}\text{bias in prompt}\\ \text{towards G vs. B words}\end{array}\right]}{\left[\begin{array}{c}\text{how much each new G wird tips}\\ \text{AI's attention towards B vs. G words}\end{array}\right]}-\left[\begin{array}{c}\text{number of G} \\ \text{words in} \\ \text{full prompt}\end{array}\right] \tag{1} \\
+n^* &=\frac{\left[\begin{array}{c}\text{G語に対するB語の}\\ \text{プロンプトの偏り}\end{array}\right]}{\left[\begin{array}{c}\text{新しいG語がAIの注意を}\\ \text{どれだけB語からG語に向けるか}\end{array}\right]}-\left[\begin{array}{c}\text{プロンプト全体} \\ \text{の中の} \\ \text{G語の数}\end{array}\right] \tag{1} \\
 
 \\
 
