--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             公開されているPDFを日本語に翻訳してみた。<br>
             <br>
             <a href="2025_Welcome to the Era of Experience/2025_Welcome to the Era of Experience.html">2025 経験の時代へようこそ</a><br>
+            <a href="2025_AlphaEvolve/AlphaEvolve.html">2025 AlphaEvolve</a>a<br>
             <a href="2025_DeepSeek-R1/2025_DeepSeek-R1 Incentivizing Reasoning Capability in LLMs via.html">2025 DeepSeek-R1：強化学習によるLLMの推論能力の促進</a><br>
             <a href="2025_Light-R1/Light-R1 Curriculum SFT, DPO and RL for Long COT from Scratch and beyond.html">2025 Light-R1</a><br>
             <a href="2025_sakana_ai_CTM/2025_ContinuousThoughtMachines.html">2025 Sakana AI CTM</a><br>
