--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <a href="2025_AlphaEvolve/AlphaEvolve.html">2025 AlphaEvolve</a><br>
             <a href="2025_DeepSeek-R1/2025_DeepSeek-R1 Incentivizing Reasoning Capability in LLMs via.html">2025 DeepSeek-R1：強化学習によるLLMの推論能力の促進</a><br>
             <a href="2025_Light-R1/Light-R1 Curriculum SFT, DPO and RL for Long COT from Scratch and beyond.html">2025 Light-R1</a><br>
+            <a href="2025_BeyondAha/Beyond ‘Aha!’_Toward Systematic Meta-Abilities Alignment in Large Reasoning Models.html">2025 Aha!を超えて</a><br>
             <a href="2025_sakana_ai_CTM/2025_ContinuousThoughtMachines.html">2025 Sakana AI CTM</a><br>
             <a href="2025_Jekyll-and-Hyde/2025_Jekyll-and-Hyde Tipping Point in an AI’s Behavior.html">2025 ジキル博士とハイド氏</a><br>
             <a href="data/2025_VGGT/2025_VGGT_Visual_Geometry_Grounded_Transformer.html">2025 VGGT: Visual Geometry Grounded Transformer</a><br>
