--- a/2025_BeyondAha/Beyond ‘Aha!’_Toward Systematic Meta-Abilities Alignment in Large Reasoning Models.html
+++ b/2025_BeyondAha/Beyond ‘Aha!’_Toward Systematic Meta-Abilities Alignment in Large Reasoning Models.html
@@ -303,7 +303,7 @@ entirely free of manual annotation.
 </p>
 <center><img src="images/fig2.png"></center>
 <p>
-図2: 3段階のパイプラインの概要：演繹、およびアブダクションの専門家を整合させ、それらをパラメータ空間でマージし、統合モデルを下流のドメインに継続的に強化学習適応させます。
+図2: 3段階のパイプラインの概要：演繹、帰納、およびアブダクションの専門家を整合させ、それらをパラメータ空間でマージし、統合モデルを下流のドメインに継続的に強化学習適応させます。
 <!--
 Figure 2: Overview of the three-stage pipeline: align deduction, induction, and abduction specialists, 
 merge them in parameter space, and continually RL-adapt the unified model to downstream domains. 
