--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <a href="2025_Light-R1/Light-R1 Curriculum SFT, DPO and RL for Long COT from Scratch and beyond.html">2025 Light-R1</a><br>
             <a href="2025_BeyondAha/Beyond ‘Aha!’_Toward Systematic Meta-Abilities Alignment in Large Reasoning Models.html">2025 Aha!を超えて</a><br>
             <a href="2025_sakana_ai_CTM/2025_ContinuousThoughtMachines.html">2025 Sakana AI CTM</a><br>
-            <a href="2025_MeanFlow/Mean Flows for One-step Generative Modeling.html"></a>2025 MeanFlow<br>
+            <a href="2025_MeanFlow/Mean Flows for One-step Generative Modeling.html">2025 MeanFlow</a><br>
             <a href="2025_Jekyll-and-Hyde/2025_Jekyll-and-Hyde Tipping Point in an AI’s Behavior.html">2025 ジキル博士とハイド氏</a><br>
             <a href="data/2025_VGGT/2025_VGGT_Visual_Geometry_Grounded_Transformer.html">2025 VGGT: Visual Geometry Grounded Transformer</a><br>
             <a href="2025_DL_not_so_Mysterious/2025_Deep_Learning_is_Not_So_Mysterious_or_Different.html">2025 Deep Learning is Not So Mysterious or Different</a><br>
