--- a/2025_MeanFlow/Mean Flows for One-step Generative Modeling.html
+++ b/2025_MeanFlow/Mean Flows for One-step Generative Modeling.html
@@ -269,7 +269,7 @@ See Fig. 2 left. A commonly used schedule is \(a_t = 1 − t\) and \(b_t = t\), 
 <center><img src="images/fig2.png"></center>
 
 <p class="margin-large">
-図2: フローマッチングにおける速度場 [28]。左: 条件付きフロー [28]。与えられた \(z_t\) は異なる \((x,\epsilon)\) ペアから発生する可能性があり、その結果、異なる条件付き速度 vt が生じる。右: 周辺フロー [28]。これは、すべての可能な条件付き速度を周辺化することで得られる。周辺速度場は、ネットワーク学習の基礎となる真の値場として機能する。ここで示されるすべての速度は、本質的に瞬間速度である。図は [12] に続く。(灰色の点: 事前分布からのサンプル、赤色の点: データからのサンプル。)
+図2: フローマッチングにおける速度場 [28]。左: 条件付きフロー [28]。与えられた \(z_t\) は異なる \((x,\epsilon)\) ペアから発生する可能性があり、その結果、異なる条件付き速度 vt が生じる。右: 周辺フロー [28]。これは、すべての可能な条件付き速度を周辺化することで得られる。周辺速度場は、ネットワーク学習の基礎となる正解値場として機能する。ここで示されるすべての速度は、本質的に瞬間速度である。図は [12] に従う。(灰色の点: 事前分布からのサンプル、赤色の点: データからのサンプル。)
 <!--
 Figure 2: Velocity fields in Flow Matching [28]. Left: conditional
 flows [28]. A given \(z_t\) can arise from different \((x,\epsilon)\)
