--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             <a href="2025_sakana_ai_CTM/2025_ContinuousThoughtMachines.html">2025 Sakana AI CTM</a><br>
             <a href="2025_MeanFlow/Mean Flows for One-step Generative Modeling.html">2025 MeanFlow</a><br>
             <a href="2025_The_illusion_of_Thinking/the-illusion-of-thinking.html">2025 The illusion of Thinking</a><br>
+            <a href="2025_Nonlinear_Brain_Dynamics_and_Many-Body_Field_Dynamics/Nonlinear_Brain_Dynamics_and_Many-Body_Field_Dynamics.html">2025 非線形脳ダイナミクスと多体場ダイナミクス</a><br>
             <a href="2025_Jekyll-and-Hyde/2025_Jekyll-and-Hyde Tipping Point in an AI’s Behavior.html">2025 ジキル博士とハイド氏</a><br>
             <a href="data/2025_VGGT/2025_VGGT_Visual_Geometry_Grounded_Transformer.html">2025 VGGT: Visual Geometry Grounded Transformer</a><br>
             <a href="2025_DL_not_so_Mysterious/2025_Deep_Learning_is_Not_So_Mysterious_or_Different.html">2025 Deep Learning is Not So Mysterious or Different</a><br>
