--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             <a href="2025_DL_not_so_Mysterious/2025_Deep_Learning_is_Not_So_Mysterious_or_Different.html">2025 Deep Learning is Not So Mysterious or Different</a><br>
             <a href="2025_UniK3D/2025_UniK3D_Universal_Camera_Monocular_3D_Estimation.html">2025 UniK3D</a><br>
             <a href="2024_CognitiveArchitectures/2024_Cognitive Architectures for Language Agents.html">2024 Cognitive Architectures</a><br>
+            <a href="2023_From Kepler to Newton/From Kepler to Newton.html">2023 ケプラーからニュートンへ：科学のための説明可能な AI</a><br>
             <a href="2020_The science of deep learning/2020_The science of deep learning.html">2020 DLの科学</a><br>
             <a href="2020_The_Unreasonable_Effectiveness_of_DL_in_AI/2020_The Unreasonable Effectiveness of DL in AI.html">2020 AIにおけるDLの不合理な有効性</a><br>
             <a href="2019_The Lottery Ticket Hypothesis/2019_The Lottery Ticket Hypothesis - Finding Sparse, Trainable Neural Networks.html">2019_(宝くじ仮説)</a><br>
