--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
             <a href="2001_Viola_Jones_Face_Detection/2001_Robus Real-time Object Detection.html">2001 (Viola & Jones 顔検出器)</a><br>
             <a href="1994_Quantum optical coherence in cytoskeletal microtubules/Quantum optical coherence in cytoskeletal microtubules.html">1994 細胞骨格微小管における量子光コヒーレンス</a><br>
             <a href="1992_plenoptic_camera/1992_Single_Lens_Stereo_with_a_Plenoptic_Camera.html">1992 (プレノプティック・カメラ)</a><br>
+            <a href="1985_Feynman_QM_Computer/Quantum_Mechanics_Computer.html">1985 可逆マシン(ファインマン)</a><br>
             <a href="1982_Simulating_Physics_with_Computers/Simulating Physics with Computers .html">1982 コンピュータで物理をシミュレーションする(ファインマン)</a><br>
             <a href="1974_WHAT IS IT LIKE TO BE A BAT/WHAT IS IT LIKE TO BE A BAT.html">1974 コウモリになるってどんな感じ？</a><br>
             <a href="1973_The Strength of Weak Ties/1973_The Strength of Weak Ties.html">1973 弱い紐帯の強さ</a><br>
