--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
             <a href="1982_Simulating_Physics_with_Computers/Simulating Physics with Computers .html">1982 コンピュータで物理をシミュレーションする(ファインマン)</a><br>
             <a href="1974_WHAT IS IT LIKE TO BE A BAT/WHAT IS IT LIKE TO BE A BAT.html">1974 コウモリになるってどんな感じ？</a><br>
             <a href="1973_The Strength of Weak Ties/1973_The Strength of Weak Ties.html">1973 弱い紐帯の強さ</a><br>
+            <a href="1971_Mental Rotation of Three-Dimensional Objects/Mental Rotation of Three-Dimensional Objects.html">1971_メンタルローテーション</a><br>
             <a href="1968_Frörich_hypothesis/1968_Long-Range Coherence and Energy Storage in Biological Systems.html">1968_(フレーリッヒの仮説)</a><br>
             <a href="1967_Brain_and_Physics_of_Many-Body_Problems/1967_Brain and Physics of Many-Body Problems.html">1967 (脳と多体問題の物理学：梅沢博臣)</a><br>
             <a href="1960_Unreasonable_Effectiveness/1960_The Unreasonable Effectiveness of Mathematics.html">1960 自然科学における数学の不合理な有効性</a><br>
