--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <a href="2007_Nonlinear_Quantum_Mechanics/2007_Classical_Mechanics_as_Nonlinear_Quantum_Mechanics.html">2007 (非線形量子力学としての古典力学)</a><br>
             <a href="2004_QBD_and_QFT/Quantum Brain Dynamics and Quantum Field Theory.html">2004 量子脳ダイナミクスと場の量子論</a><br>
             <a href="2001_Viola_Jones_Face_Detection/2001_Robus Real-time Object Detection.html">2001 (Viola & Jones 顔検出器)</a><br>
-            <a href="1998_PageRank/The PageRank Citation Ranking.html">1998 RageRank</a><br>
+            <a href="1998_PageRank/The PageRank Citation Ranking.html">1998 PageRank</a><br>
             <a href="1994_Quantum optical coherence in cytoskeletal microtubules/Quantum optical coherence in cytoskeletal microtubules.html">1994 細胞骨格微小管における量子光コヒーレンス</a><br>
             <a href="1992_plenoptic_camera/1992_Single_Lens_Stereo_with_a_Plenoptic_Camera.html">1992 (プレノプティック・カメラ)</a><br>
             <a href="1985_Feynman_QM_Computer/Quantum_Mechanics_Computer.html">1985 可逆マシン(ファインマン)</a><br>
