--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
             <a href="1968_Frörich_hypothesis/1968_Long-Range Coherence and Energy Storage in Biological Systems.html">1968_(フレーリッヒの仮説)</a><br>
             <a href="1967_Brain_and_Physics_of_Many-Body_Problems/1967_Brain and Physics of Many-Body Problems.html">1967 (脳と多体問題の物理学：梅沢博臣)</a><br>
             <a href="1960_Unreasonable_Effectiveness/1960_The Unreasonable Effectiveness of Mathematics.html">1960 自然科学における数学の不合理な有効性</a><br>
+            <a href="1950_The_Imitation_Game/COMPUTING MACHINERY AND INTELLIGENCE.html">1950 チューリングのイミテーション・ゲーム</a><br><br>
         </p>
     </body>
 </html>
