--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <a href="1971_Mental Rotation of Three-Dimensional Objects/Mental Rotation of Three-Dimensional Objects.html">1971_メンタルローテーション</a><br>
             <a href="1968_Frörich_hypothesis/1968_Long-Range Coherence and Energy Storage in Biological Systems.html">1968_(フレーリッヒの仮説)</a><br>
             <a href="1967_Brain_and_Physics_of_Many-Body_Problems/1967_Brain and Physics of Many-Body Problems.html">1967 (脳と多体問題の物理学：梅沢博臣)</a><br>
-            <a href="1965_Bresenham/Algorithm for computer contril of a digital plotter.html">1965 Bresenhamの直線描画アルゴリズム</a><br><br>
+            <a href="1965_Bresenham/Algorithm for computer contril of a digital plotter.html">1965 Bresenhamの直線描画アルゴリズム</a><br>
             <a href="1960_Unreasonable_Effectiveness/1960_The Unreasonable Effectiveness of Mathematics.html">1960 自然科学における数学の不合理な有効性</a><br>
             <a href="1950_The_Imitation_Game/COMPUTING MACHINERY AND INTELLIGENCE.html">1950 チューリングのイミテーション・ゲーム</a><br>
             　式を含まないのでブラウザの翻訳機能で訳そう<br>
