--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             公開されているPDFを日本語に翻訳してみた。<br>
             <br>
             <a href="2025_Welcome to the Era of Experience/2025_Welcome to the Era of Experience.html">2025 経験の時代へようこそ</a><br>
-            <a href="2025_HRM/Hierarchical Reasoning Model.html">HRM 階層的推論モデル</a><br>
+            <a href="2025_HRM/Hierarchical Reasoning Model.html">2025 HRM 階層的推論モデル</a><br>
             <a href="2025_AlphaEvolve/AlphaEvolve.html">2025 AlphaEvolve</a><br>
             <a href="2025_DeepSeek-R1/2025_DeepSeek-R1 Incentivizing Reasoning Capability in LLMs via.html">2025 DeepSeek-R1：強化学習によるLLMの推論能力の促進</a><br>
             <a href="2025_Light-R1/Light-R1 Curriculum SFT, DPO and RL for Long COT from Scratch and beyond.html">2025 Light-R1</a><br>
