--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             <a href="data/2025_VGGT/2025_VGGT_Visual_Geometry_Grounded_Transformer.html">2025 VGGT: Visual Geometry Grounded Transformer</a><br>
             <a href="2025_DL_not_so_Mysterious/2025_Deep_Learning_is_Not_So_Mysterious_or_Different.html">2025 Deep Learning is Not So Mysterious or Different</a><br>
             <a href="2025_UniK3D/2025_UniK3D_Universal_Camera_Monocular_3D_Estimation.html">2025 UniK3D</a><br>
+            <a gref="papers/2024_The_Big_World_Hypothesis/The_Big_World_Hypothesis.html">2024 The Big World Hypothesis and its Ramifications for Artificial Intelligence</a><br>
             <a href="2024_CognitiveArchitectures/2024_Cognitive Architectures for Language Agents.html">2024 Cognitive Architectures</a><br>
             <a href="2023_From Kepler to Newton/From Kepler to Newton.html">2023 ケプラーからニュートンへ：科学のための説明可能な AI</a><br>
             <a href="2022_GROKKING - GENERALIZATION BEYOND OVERFITTING ON SMALL ALGORITHMIC DATASETS/GROKKING - GENERALIZATION BEYOND OVERFITTING ON SMALL ALGORITHMIC DATASETS.html">2022_Grokking</a><br>
